# AndroidRScoop

./: CMakeLists.txt  README.md  dump.cpp  dump.h  extract.cpp  extract.h  latesthandmadeoffsets.md  main.cpp  mem.cpp  mem.h
offsets/: fflags.hpp  offsets.hpp  structs.h
